# librutils

./: .gitignore  CMakeLists.txt  CMakeSettings.json
librutils-core/: CMakeLists.txt
librutils-core/cmake/: librutils-core-config.cmake
librutils-core/include/: callback_timer.h  string_utils.h
librutils-core/include/librutils-core/: bitmask_operators.h
librutils-core/include/rutils-core/: base64.h  delta_timer.h  random.h  service.h  standard_colors.h
librutils-core/src/: base64.cpp  callback_timer.cpp  delta_timer.cpp  random.cpp  string_utils.cpp
librutils-dpp/: CMakeLists.txt  slashcommands.h
librutils-dpp/cmake/: librutils-dpp-config.cmake  librutils-dpp-vcpkg.pc.in  librutils-dpp.pc.in
librutils-dpp/include/: slashcommand_groups.h  slashcommand_handler.h
librutils-dpp/include/librutils-dpp/preconditions/: any_of.h  has_channel.h
librutils-dpp/include/preconditions/: has_role.h
librutils-dpp/include/rutils-dpp/: base_bot.h  slashcommand_groups.h  slashcommand_handler.h  slashcommands.h  utils.h
librutils-dpp/include/rutils-dpp/preconditions/: any_of.h  base_precondition.h  has_channel.h  has_guild.h  has_permissions.h  has_role.h  has_uid.h  precondition.h  preconditions.h
librutils-dpp/src/: base_bot.cpp  slashcommand_groups.cpp  slashcommand_handler.cpp  utils.cpp
librutils-dpp/src/preconditions/: all_of.cpp  any_of.cpp  base_precondition.cpp  has_channel.cpp  has_guild.cpp  has_permissions.cpp  has_role.cpp  has_uid.cpp  precondition.cpp
rutils-core/: CMakeLists.txt  callback_timer.cpp  callback_timer.h  delta_timer.cpp  delta_timer.h  service_locator.h  string.cpp  string.h
rutils-dpp/: CMakeLists.txt  base_bot.cpp  base_bot.h  slashcommand_groups.cpp  slashcommand_groups.h  slashcommand_handler.h  utils.h
rutils-dpp/preconditions/: all_of.cpp  all_of.h  any_of.cpp  has_channel.cpp  has_permissions.cpp  has_role.cpp  precondition.cpp
